Created the Login component and updated the Register Component

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <!--Changing the web icon-->
-  <link rel="icon" href="72565417_400377520877201_8889287464569536512_n.jpg" />
+  <!-- <link rel="icon" href="72565417_400377520877201_8889287464569536512_n.jpg" /> -->
   <!--Material UI Roboto Fonts-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <!--Material UI Font Icons-->
@@ -13,6 +13,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="logo192.png" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
